# ChangeLog for media-sound/protux
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/protux/ChangeLog,v 1.28 2008/01/26 11:27:04 opfer Exp $

  26 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  protux-0.50.100.ebuild:
  add app-arch/zip for source USE flag

  26 Jan 2008; Samuli Suominen <drac@gentoo.org> -files/protux-gentoo.patch,
  -protux-0.20.1.ebuild, -protux-0.20.2.ebuild:
  Remove unused versions wrt #205761.

  26 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  protux-0.50.100.ebuild:
  stable x86, bug 207529

  22 Jul 2007; Samuli Suominen <drac@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  Remove virtual/x11 references.

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

*protux-0.50.100 (03 Mar 2007)

  03 Mar 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  +protux-0.50.100.ebuild:
  Version bump for bug #127537. protux is now written entirely in Java so
  adding java herd with the sound herd as the maintainer.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  06 Apr 2006; Thomas Cort <tcort@gentoo.org> protux-0.20.2.ebuild:
  Updated HOMEPAGE.

  27 Mar 2006; Luis Medinas <metalgod@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  Modular X Love closes bug #126929.

  31 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  Cleanup of econf call, without assuming GNU ld.

  04 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  Don't install COPYING file.

  07 Jul 2005; Caleb Tennis <caleb@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  Fix qt dep

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> protux-0.20.1.ebuild,
  protux-0.20.2.ebuild:
  added a patch to make compiling possible again. fixes bug #74436.
