@@ -1,4 +1,4 @@
 DIST protux-0.50.100.tar.gz 392027 RMD160 e8806ce35a72e6b93e3df15e6fcd65a254e9950a SHA1 067bbc12ceaa9aef97cd45a4174e5536a31d0e09 SHA256 cb8edab6684ea58c13e5cfcec0b6925f32e35cfca4129ca5ab668234541f78e2
-EBUILD protux-0.50.100.ebuild 1022 RMD160 9bb2218c89dcf7cfdfd491299ccc8c643df24725 SHA1 f3c6004a66dc66c78eb72953fb418f98ba27ae22 SHA256 b723ded9e0448ab9c59e33abb16673d521ba0f1837b03cadccf065e9437a7fe9
-MISC ChangeLog 3801 RMD160 40515a9d1361bbf05366b4a478eef9fa091908b0 SHA1 0400fa906c078d3313c68a13f462c99636355989 SHA256 1ea4aa6682c3f6a908249fde25553948ea42308da442504f33f24923b9adb35c
+EBUILD protux-0.50.100.ebuild 1168 RMD160 e8ecd9a867a0fcf4c18496361fd754b58495853a SHA1 06aa9cb65cde4f1d936174b88519adffcdd2deaa SHA256 cef17114a77c39099dee8060b1807655dafcdc4ae97e22b4a6922ebe24711d54
+MISC ChangeLog 3929 RMD160 2c742e0d880d2bcf71cbf196e981f6713626f45e SHA1 7b547d71fb686df8f298f4e0ec06f3476f41bb31 SHA256 821fbca068bff48db0f78f01e6abe1aced6ef9cd1efc234061c02aa9f95a95b1
 MISC metadata.xml 183 RMD160 9c31226e04ca6d523e74425bcafdd9c8b54c8008 SHA1 49913b3533887287f138dea632f54d1ff5c980d8 SHA256 28ac39364dba3eb3dd47d2aa41a725d26c6b6104640d162f317eca75107b9093
