@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/protux
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/protux/ChangeLog,v 1.28 2008/01/26 11:27:04 opfer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/protux/ChangeLog,v 1.29 2010/05/05 14:37:29 caster Exp $
+
+  05 May 2010; Vlastimil Babka <caster@gentoo.org> protux-0.50.100.ebuild:
+  Fix compilation with non-sun JDK's, bug #318589.
 
   26 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
   protux-0.50.100.ebuild:
